--- a/app/src/main/res/layout-land/activity_check_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_check_menu_page.xml
@@ -189,7 +189,8 @@
             android:id="@+id/textView4"
             android:layout_width="1200dp"
             android:layout_height="450dp"
-            android:background="#FFEAEA"
+            android:background="@drawable/button_style"
+            android:backgroundTint="#FFEAEA"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.437"
