--- a/app/src/main/res/layout-land/activity_choice_pay_page.xml
+++ b/app/src/main/res/layout-land/activity_choice_pay_page.xml
@@ -14,6 +14,16 @@
             android:layout_height="match_parent"
             android:scrollbarAlwaysDrawHorizontalTrack="false">
 
+            <TextView
+                android:id="@+id/textView29"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="#FE5555"
+                app:layout_constraintBottom_toTopOf="@+id/guideline"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
                 android:layout_width="wrap_content"
@@ -27,7 +37,7 @@
                 android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="#FFEAEA"
+                android:background="#FFF7F7"
                 android:gravity="center_horizontal"
                 android:textColor="#504E4E"
                 android:textSize="24dp"
@@ -42,10 +52,11 @@
                 android:id="@+id/user_shop_name"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
+                android:fontFamily="@font/nanumsquareneo_bold"
                 android:gravity="center"
                 android:text="상호명"
-                android:textColor=" #FF5555"
-                android:textSize="34sp"
+                android:textColor="#FFFFFF"
+                android:textSize="48sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +68,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginEnd="10dp"
-                android:background="#FEE9E9"
+                android:background="#FFF7F7"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_Hot_Cold_ryu"
                 app:layout_constraintEnd_toStartOf="@+id/tv_Hot_Cold_ryu"
                 app:layout_constraintTop_toTopOf="@+id/tv_Hot_Cold_ryu"
@@ -69,6 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="60dp"
                 android:layout_marginTop="40dp"
+                android:fontFamily="@font/nanumsquareneo_bold"
                 android:text="결제 방식을 선택해주세요"
                 android:textColor="#504E4E"
                 android:textSize="46sp"
@@ -89,90 +101,83 @@
 
 
             <Button
-                android:id="@+id/btn_small_menu_page2"
-                android:layout_width="420dp"
+                android:id="@+id/btn_Customer_main_page"
+                android:layout_width="0dp"
                 android:layout_height="200dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginBottom="45dp"
-                android:background="@drawable/btn_radius"
+                android:layout_marginStart="80dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="50dp"
+                android:background="@drawable/button_style"
                 android:backgroundTint="#FF5555"
                 android:drawableLeft="@drawable/pay_card_xml"
-                android:paddingLeft="100px"
+                android:fontFamily="@font/nanumsquareneo_bold"
+                android:padding="40dp"
                 android:text="카드결제"
                 android:textColor="#F7F7F7"
                 android:textSize="48sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toStartOf="@+id/guideline8"
-                app:layout_constraintHorizontal_bias="0.695"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_Hot_Cold_ryu"
-                app:layout_constraintVertical_bias="0.095" />
+                app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
             <Button
                 android:id="@+id/btn_small_menu_page3"
-                android:layout_width="420dp"
+                android:layout_width="0dp"
                 android:layout_height="200dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="80dp"
                 android:layout_marginBottom="96dp"
-                android:background="@drawable/btn_radius"
+                android:background="@drawable/button_style"
                 android:backgroundTint="#FF5555"
                 android:drawableLeft="@drawable/pay_kakaopay_xml"
+                android:fontFamily="@font/nanumsquareneo_bold"
+                android:padding="40dp"
                 android:text="카카오페이"
-                android:paddingLeft="100px"
                 android:textColor="#F7F7F7"
                 android:textSize="48sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/textView"
-                app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page2"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page2"
-                app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page2"
-                app:layout_constraintVertical_bias="0.265" />
+                app:layout_constraintEnd_toEndOf="@+id/btn_Customer_main_page"
+                app:layout_constraintStart_toStartOf="@+id/btn_Customer_main_page"
+                app:layout_constraintTop_toBottomOf="@+id/btn_Customer_main_page" />
 
             <Button
                 android:id="@+id/btn_small_menu_page5"
-                android:layout_width="420dp"
+                android:layout_width="0dp"
                 android:layout_height="200dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="45dp"
-                android:background="@drawable/btn_radius"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="80dp"
+                android:background="@drawable/button_style"
                 android:backgroundTint="#FF5555"
                 android:drawableLeft="@drawable/pay_cash_xml"
-                android:text="현금결제"
+                android:fontFamily="@font/nanumsquareneo_bold"
+                android:padding="50px"
                 android:paddingLeft="100px"
+                android:text="현금결제"
                 android:textColor="#F7F7F7"
                 android:textSize="48sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/guideline14"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_Customer_main_page"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.326"
                 app:layout_constraintStart_toStartOf="@+id/guideline8"
-                app:layout_constraintTop_toBottomOf="@+id/tv_Hot_Cold_ryu"
-                app:layout_constraintVertical_bias="0.094" />
+                app:layout_constraintTop_toTopOf="@+id/btn_Customer_main_page" />
 
             <Button
                 android:id="@+id/btn_small_menu_page6"
-                android:layout_width="420dp"
+                android:layout_width="0dp"
                 android:layout_height="200dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="96dp"
-                android:background="@drawable/btn_radius"
+                android:background="@drawable/button_style"
                 android:backgroundTint="#FF5555"
                 android:drawableLeft="@drawable/pay_payco_xml"
+                android:fontFamily="@font/nanumsquareneo_bold"
+                android:padding="40dp"
                 android:text="페이코"
-                android:paddingLeft="100px"
                 android:textColor="#F7F7F7"
                 android:textSize="48sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/textView"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_small_menu_page3"
                 app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page5"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page5"
-                app:layout_constraintTop_toBottomOf="@+id/btn_small_menu_page5"
-                app:layout_constraintVertical_bias="0.253" />
+                app:layout_constraintTop_toTopOf="@+id/btn_small_menu_page3" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline8"
@@ -198,8 +203,8 @@
             <!-- 뚜껑 쇼핑카드 -->
             <ImageButton
                 android:id="@+id/btn_cart_page3"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="#00FFFFFF"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_back"
