--- a/app/src/main/res/drawable/wallet_xml.xml
+++ b/app/src/main/res/drawable/wallet_xml.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/kakaopay"
-        android:width="150dp"
-        android:height="100dp" />
+        android:drawable="@drawable/wallet"
+        android:width="80dp"
+        android:height="80dp" />
+
 </layer-list>
