--- a/app/src/main/res/layout-land/activity_customer_main_page.xml
+++ b/app/src/main/res/layout-land/activity_customer_main_page.xml
@@ -118,7 +118,7 @@
         android:layout_height="400dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="80dp"
-        android:background="#FD5555"
+        android:background="@drawable/button_style"
         android:drawableBottom="@drawable/eat_hear_xml"
         android:fontFamily="@font/nanumsquareneo_bold"
         android:text="먹고 가기"
@@ -162,7 +162,7 @@
         android:layout_height="400dp"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="100dp"
-        android:background="#FD5555"
+        android:background="@drawable/button_style"
         android:drawableBottom="@drawable/take_out_xml"
         android:fontFamily="@font/nanumsquareneo_bold"
         android:text="포장 하기"
