--- a/app/src/main/res/layout-land/activity_hot_cold_page.xml
+++ b/app/src/main/res/layout-land/activity_hot_cold_page.xml
@@ -14,7 +14,7 @@
             android:layout_height="450dp"
             android:layout_marginStart="100dp"
             android:layout_marginEnd="80dp"
-            android:background="#FF5555"
+            android:background="@drawable/button_style"
             android:drawableBottom="@drawable/cold_file"
             android:fontFamily="@font/nanumsquareneo_bold"
             android:gravity="center_vertical"
@@ -79,7 +79,6 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="#FE5555"
-            android:text="TextView"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -175,7 +174,7 @@
             android:layout_height="450dp"
             android:layout_marginStart="80dp"
             android:layout_marginEnd="100dp"
-            android:background="#FF5555"
+            android:background="@drawable/button_style"
             android:drawableBottom="@drawable/hot_file"
             android:fontFamily="@font/nanumsquareneo_bold"
             android:gravity="center|top"
