--- a/app/src/main/res/layout-land/activity_main_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_main_menu_page.xml
@@ -50,7 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:layout_marginEnd="40dp"
-            android:background="@drawable/btn_radius"
+            android:background="@drawable/button_style"
             android:backgroundTint="#FF5555"
             android:fontFamily="@font/nanumsquareneo_bold"
             android:text="에이드"
@@ -62,13 +62,13 @@
             app:layout_constraintTop_toTopOf="@+id/btn_small_menu_page1" />
 
         <Button
-            android:id="@+id/btn_small_menu_page2"
+            android:id="@+id/btn_Customer_main_page"
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="30dp"
-            android:background="@drawable/btn_radius"
+            android:background="@drawable/button_style"
             android:backgroundTint="#FF5555"
             android:fontFamily="@font/nanumsquareneo_bold"
             android:text="라떼"
@@ -85,15 +85,15 @@
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:layout_marginTop="50dp"
-            android:background="@drawable/btn_radius"
+            android:background="@drawable/button_style"
             android:backgroundTint="#FF5555"
             android:fontFamily="@font/nanumsquareneo_bold"
             android:text="커피"
             android:textColor="#F7F7F7"
             android:textSize="60sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/btn_small_menu_page2"
-            app:layout_constraintStart_toStartOf="@+id/btn_small_menu_page2"
+            app:layout_constraintEnd_toEndOf="@+id/btn_Customer_main_page"
+            app:layout_constraintStart_toStartOf="@+id/btn_Customer_main_page"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -122,17 +122,17 @@
             android:layout_height="150dp"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
-            android:background="@drawable/btn_radius"
+            android:background="@drawable/button_style"
             android:backgroundTint="#FF5555"
             android:fontFamily="@font/nanumsquareneo_bold"
             android:text="요거트"
             android:textColor="#F7F7F7"
             android:textSize="60sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_small_menu_page2"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_Customer_main_page"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline8"
-            app:layout_constraintTop_toTopOf="@+id/btn_small_menu_page2" />
+            app:layout_constraintTop_toTopOf="@+id/btn_Customer_main_page" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline14"
