--- a/app/src/main/res/layout-land/activity_small_menu_page1_1.xml
+++ b/app/src/main/res/layout-land/activity_small_menu_page1_1.xml
@@ -120,10 +120,14 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="50dp"
+        android:background="@drawable/button_style"
         android:backgroundTint="#FFEAEA"
         android:drawableTop="@drawable/coffee_05_small_menu"
         android:fontFamily="@font/nanumsquareneo_bold"
         android:gravity="center"
+        android:padding="20dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="10dp"
         android:text="에스프레소       4,000원"
         android:textColor="#000000"
         android:textSize="50dp"
@@ -198,11 +202,15 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="100dp"
+        android:background="@drawable/button_style"
         android:backgroundTint="#FFEAEA"
         android:drawableTop="@drawable/coffee_01_small_menu"
         android:elevation="100dp"
         android:fontFamily="@font/nanumsquareneo_bold"
         android:gravity="center"
+        android:padding="20dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="10dp"
         android:text="아메리카노     4,000원"
         android:textColor="#000000"
         android:textSize="50dp"
