--- a/app/src/main/res/layout/activity_join_page.xml
+++ b/app/src/main/res/layout/activity_join_page.xml
@@ -51,7 +51,8 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="80dp"
-            android:background="#FFEAEA"
+            android:background="@drawable/button_style"
+            android:backgroundTint="#FFEAEA"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -123,6 +124,7 @@
             android:fontFamily="@font/nanumsquareneo_variable"
             android:hint="  아이디를 입력해 주세요"
             android:inputType="textPersonName"
+            android:paddingLeft="15dp"
             android:textColorHint="#504E4E"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/user_shop_name"
@@ -142,6 +144,7 @@
             android:fontFamily="@font/nanumsquareneo_variable"
             android:hint="  매장명을 입력해 주세요"
             android:inputType="textPersonName"
+            android:paddingLeft="15dp"
             android:textColorHint="#504E4E"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
@@ -159,6 +162,7 @@
             android:fontFamily="@font/nanumsquareneo_variable"
             android:hint="  비밀번호를 입력해 주세요"
             android:inputType="textPersonName"
+            android:paddingLeft="15dp"
             android:textColorHint="#504E4E"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/user_id"
@@ -176,6 +180,7 @@
             android:fontFamily="@font/nanumsquareneo_variable"
             android:hint="  전화번호를 입력해 주세요"
             android:inputType="textPersonName"
+            android:paddingLeft="15dp"
             android:textColorHint="#504E4E"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/user_pw"
@@ -207,7 +212,7 @@
             app:layout_constraintTop_toTopOf="@+id/guideline" />
 
         <Button
-            android:id="@+id/btn_join"
+            android:id="@+id/btn_Login_page"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
