--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -14,7 +14,7 @@
         android:layout_height="60dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="90dp"
         android:background="@drawable/button_style"
         android:backgroundTint=" #FFEAEA"
         android:fontFamily="@font/nanumsquareneo_bold"
@@ -62,7 +62,7 @@
         android:id="@+id/login_user_id"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginBottom="10dp"
         android:background="@android:color/transparent"
         android:ems="10"
         android:fontFamily="@font/nanumsquareneo_variable"
@@ -73,8 +73,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/login_user_pw"
         app:layout_constraintEnd_toEndOf="@+id/login_user_pw"
-        app:layout_constraintStart_toStartOf="@+id/login_user_pw"
-        app:layout_constraintTop_toBottomOf="@+id/imageView19" />
+        app:layout_constraintStart_toStartOf="@+id/login_user_pw" />
 
     <ImageView
         android:id="@+id/imageView8"
@@ -101,7 +100,7 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="40dp"
         android:background="@android:color/transparent"
         android:ems="10"
         android:fontFamily="@font/nanumsquareneo_variable"
