--- a/app/src/main/res/layout/activity_manage_main_page.xml
+++ b/app/src/main/res/layout/activity_manage_main_page.xml
@@ -52,7 +52,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="40dp"
-        android:background="#FFEAEA"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#FFEAEA"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
