--- a/app/src/main/res/layout-land/activity_join_page.xml
+++ b/app/src/main/res/layout-land/activity_join_page.xml
@@ -191,7 +191,7 @@
                 app:layout_constraintTop_toTopOf="@+id/guideline" />
 
             <Button
-                android:id="@+id/btn_join"
+                android:id="@+id/btn_Login_page"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="30dp"
