--- a/app/src/main/res/layout/activity_choice_mode_page.xml
+++ b/app/src/main/res/layout/activity_choice_mode_page.xml
@@ -58,7 +58,8 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="50dp"
-        android:background="#FFEAEA"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#FFEAEA"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.0"
@@ -74,7 +75,7 @@
         android:fontFamily="@font/nanumsquareneo_variable"
         android:text="사장님 안녕하세요!"
         android:textColor="#504E4E"
-        android:textSize="24sp"
+        android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/user_shop_name"
@@ -105,7 +106,7 @@
         android:fontFamily="@font/nanumsquareneo_variable"
         android:text="(매장명)"
         android:textColor="#504E4E"
-        android:textSize="24sp"
+        android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tvcname2"
         app:layout_constraintEnd_toEndOf="parent"
