--- a/app/src/main/res/layout/menu_list.xml
+++ b/app/src/main/res/layout/menu_list.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/menu_num"
+            android:id="@+id/inventory_num"
             android:layout_width="28dp"
             android:layout_height="match_parent"
             android:background="@drawable/table_temp"
@@ -26,7 +26,7 @@
             android:gravity="center"
             android:textStyle="bold" />
 
-        <TextView
+        <EditText
             android:id="@+id/menu_name"
             android:layout_width="58dp"
             android:layout_height="match_parent"
@@ -56,7 +56,7 @@
             android:textSize="14sp"
             android:textStyle="bold" />
 
-        <TextView
+        <EditText
             android:id="@+id/menu_status"
             android:layout_width="53dp"
             android:layout_height="match_parent"
@@ -66,7 +66,7 @@
             android:textSize="14sp"
             android:textStyle="bold" />
 
-        <TextView
+        <EditText
             android:id="@+id/menu_image"
             android:layout_width="87dp"
             android:layout_height="match_parent"
